# llm_as_mr_bt_planner

./: .env.example  .gitignore  CHANGELOG.md  LLM-MultiRobot-BT-Planner.pptx  LLM-as-MR-BT-Planner_Progress.pptx  LLM-as-multirobot-BT-planner Tracker.xlsx  README.md  main.tex  make_deck.py  pyproject.toml  references.bib
data/: capabilities.json  gear_assembly_task.json  packaging_task.json  scenario.json  scenario2.json  simple_handoff.json
docs/: algorithms.md  architecture.md
papers/: LLM_BT_LitReview.xlsx
prompts/: assignment_prompt.txt  bt_generation_prompt.txt  repair_prompt.txt  synchronization_prompt.txt  task_graph_prompt.txt
scripts/: run_mrbtp.py
src/: analysis.py  analyze_latest_failures.py  experiments.py  export_paper_tables.py  llm_planner.py  main.py  metrics.py  planner.py  repair.py  run_experiments.py  run_llm_experiment.py  run_llm_trials.py  schemas.py  simulator.py  validator.py
src/llm_mr_bt_planner/: __init__.py  bt.py  cli.py  config.py  domain.py  plan.py  planner.py  predicates.py  validation.py  viz.py
src/llm_mr_bt_planner/baselines/: __init__.py  base.py  flat_llm.py  hier_llm.py  mrbtp_adapter.py  mrbtp_port.py  prompts.py
src/llm_mr_bt_planner/execution/: symbolic.py
src/mrbtp/: __init__.py  bt.py  cli.py  domain.py  plan.py  predicates.py  prompts.py  simulation.py  validation.py  viz.py
src/mrbtp/execution/: __init__.py  (+2 more)
tests/: conftest.py  test_baselines.py  test_bt.py  test_domain.py  test_execution.py  test_modes.py  test_mrbtp_adapter.py  test_predicates.py  test_simulation.py  test_validation.py  test_viz.py
(+9 files in other folders)
