[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mrbtp"
version = "0.2.0"
description = "LLM-guided generation of synchronized multi-robot Behavior Trees, with a declarative symbolic domain, validator, tick-based simulator, and reproducible experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LLM-as-MR-BT-Planner contributors" }]
keywords = ["behavior-trees", "multi-robot", "task-planning", "llm", "robotics"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
mrbtp = "mrbtp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning:mrbtp.*"]

[tool.ruff]
line-length = 110
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["mrbtp"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = true
